# plana

./: .gitignore  Dockerfile.web  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
engine/: Dockerfile  README.md  pyproject.toml
engine/data/: catalog.yaml  norms.yaml
engine/plana_engine/: __init__.py  catalog.py  cli.py  norms.py  presets.py  types.py  validator.py
engine/plana_engine/algo/: __init__.py  core.py  corridor.py  engineering.py  pipeline.py  tile.py
engine/plana_engine/api/: __init__.py  main.py  schemas.py
engine/plana_engine/cad/: __init__.py  floorplan_dxf.py  schema.py  template.py  writer.py
engine/plana_engine/exporters/: __init__.py  dxf.py  package.py
engine/plana_engine/geometry/: __init__.py  facades.py  polygon.py  slots.py
engine/plana_engine/importers/: __init__.py  contour.py  gpzu.py
engine/plana_engine/parser/: __init__.py  dxf.py  rect.py
engine/plana_engine/visualizer/: __init__.py  agent_enhancer.py  enhancer.py  extra_prompts.py  kz_norms.py  marketing_prompt.py  openai_client.py  prompt.py
research/kz-norms/: README.md  accessibility.md  engineering-systems.md  fire-safety.md  insolation.md  parking.md  public-buildings.md  residential.md  seismic.md  stairs-lifts.md  structure.md  thermal.md  urban-planning.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppMetrics.tsx  ComparisonTable.tsx  Controls.tsx  FloorPlan.tsx  Metrics.tsx  PlanCanvas.tsx  PlanCanvas3D.tsx  PresetControls.tsx  PromptForm.tsx
src/lib/: auth.ts  engine.ts  generator.ts  pdf-export.ts  pdf.ts  (+1 more)
(+3 files in other folders)
