[project]
name = "plana-engine"
version = "0.2.0"
description = "Plana — prompt-driven визуализатор планировок (params → prompt → gpt-image)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "openai>=1.40",
    "pillow>=10.0",
    "httpx>=0.27",
    "ezdxf>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plana_engine*"]
